re PR target/60017 (Struct not returned correctly)

PR target/60017
	* config/i386/i386.c (classify_argument): Fix handling of bit_offset
	when calculating size of integer atomic types.

testsuite/ChangeLog:

	PR target/60017
	* gcc.c-torture/execute/pr60017.c: New test.

From-SVN: r207399